# OptiClamp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
coam/: coam.py  globals.py  run_simulation.py
coam/candidate_functions/: singletask_gp_evhi_samplers.py  singletask_gp_qevhi_sampler.py
coam/minkowski/: minkowski.py
coam/resources/: am_part_orientation_1.stl  am_part_orientation_1_obstacle.stl  am_part_orientation_2.stl  am_part_orientation_2_obstacle.stl  cube.stl  delta_effector.stl  effector.step  jaw_actuated.stp  jaw_fixed.stp  part_geometry.step  part_geometry.stl
coam/samplers/: singletask_gp_qnehvi_with_random_chance.py
coam/templates/: clamp.py  clamp.py.jinja  jaw_block.stl
coam/util/: choicebox.py  choicedialog.py  geometry_io.py  inputdialog.py
