[tool.poetry]
name = "coam"
version = "0.1.0"
description = "COAM facilitates generating custom jaw geometry that allows additively manufactured parts to be conventionally clamped. "
authors = ["Constantin Chaumet <constantin.chaumet@tu-dortmund.de>", "Jan Liß <jan.liß@tu-dortmund.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10, < 3.12"
abqpy = "2023.7.0"
numpy = "^1"
cadquery = "2.4.0"
pymeshlab = "^2023.12"
docker = "^7"
openbox = { extras = ["extra"], version = "^0" }
optuna = "^3"
optuna-dashboard = "^0"
botorch = "^0.10.0"
colorlog = "^6"
optuna-integration = "^3"
customtkinter = "^5.2.2"


[tool.poetry.scripts]
optimize = "coam.run_simulation:main"
results = "coam.run_simulation:generate_result_geometry"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
black = "^23"
flake8 = "^7"
isort = "^5"
pyright = "^1"
pytest = "^7"
pre-commit = "^3"
